--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 name : Foundation5/github pages/Jykill starter
-brand : My Project
-description : This is the description of my project
+brand : CloudMining
+description : CloudMining site
 keyword : 
-url : http://daigofuji.github.io/jekyll-foundation-6-starter/
-email : daigo@daigofujiwara.com
-twitter : DaigoFuji
-github : DaigoFuji
-author : Daigo Fujiwara
-year : 2016
+url : http://cloudmining.github.io/
+email : info@cloudmining.one
+twitter : CloudMining
+github : CloudMining
+author : CloudMining
+year : 2017
 markdown : kramdown
 exclude :
   - node_modules
