--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-name : Foundation5/github pages/Jykill starter
+name : cloudmining.github.io
 brand : CloudMining
 description : CloudMining site
 keyword : 
-url : http://cloudmining.github.io/
+url : https://cloudmining.github.io/
 email : info@cloudmining.one
 twitter : CloudMining
 github : CloudMining
