--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name : Foundation5/github pages/Jykill starter
+name : cloudmining.github.io
 brand : CloudMining
 description : CloudMining site
 keyword : 
